--- a/public/app/views/pages/managment/management.html
+++ b/public/app/views/pages/managment/management.html
@@ -6,9 +6,17 @@
                 <input ng-model="number" type="text" placeholder="Enteries to display...">
                 <button ng-click="manage.showMore(number);" class="ui primary  small button">Apply Filter</button>
                 <button ng-click="manage.showAll();" class="ui primary  small button">Show All</button>
-            </div>      
-        </div>  
+            </div>  
+            <br>
+            <br>
+            <div class="ui icon input">
+                <input ng-model="searchKeyword" class="prompt" type="text" placeholder="Search...">
+                <i class="search icon"></i>
+            </div>
+        </div> 
+    
     </div>
+
 
     <div class="ui tiny error message" ng-show="manage.failMsg">
             <div class="header">Uh Oh</div>
@@ -27,7 +35,7 @@
         </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="person in manage.users | limitTo: manage.limit">
+            <tr ng-repeat="person in manage.users | filter: searchKeyword | limitTo: manage.limit">
                 <td>{{ person.name }}</td>
                 <td>{{ person.username }}</td>
                 <td>{{ person.email }}</td>
