--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -58,13 +58,13 @@
     <a href="/about" class="item">About</a>
     <a ng-show="main.isLoggedIn && main.admin" href="/management" class="item">Management</a>
     <div class="right menu">
-      <div class="item">
+      <div ng-show="!main.isLoggedIn" class="item">
         <a href="/login" class="ui button">Log in</a>
       </div>
-      <div class="item">
+      <div ng-show="!main.isLoggedIn" class="item">
         <a href="/register" class="ui primary button">Register</a>
       </div>
-      <div class="item">
+      <div ng-show="main.isLoggedIn" class="item">
         <a href="/logout" class="ui primary button">Logout</a>
       </div>
     </div>
