--- a/public/app/views/pages/events/createEvent.html
+++ b/public/app/views/pages/events/createEvent.html
@@ -1,26 +1,43 @@
-<div class="ui inverted segment">
-    <h1>Register</h1>
+<br>
+<div class="ui segment">
+    <h1>Create Event</h1>
     <form class="ui form success error" ng-submit="event.createEvent(eventData);" name="eventForm" novalidate id="eventForm">
-      <div class="four fields">
-        <br>
-        <div class="field">
-          <label class="ui black label">Event Name</label>
+      <h4 class="ui dividing header">Basic Info</h4>
+      <div class="two fields">
+        <div class="ten wide field">
+          <label class="ui primary label">Event Name</label>
           <input ng-disabled="event.disabled" placeholder="Full Name" type="text" name="name" ng-model="event.eventData.name" id="name" required>
         </div>
-    
-        <div class="field">
-          <label class="ui black label">Venue</label>
-          <input ng-disabled="event.disabled" placeholder="Username" type="text" name="username" ng-model="event.eventData.username" id="username">
+
+        <div class="six wide field">
+          <label class="ui primary label">EventID</label>
+          <input ng-disabled="event.disabled" placeholder="Password" type="password" name="password" ng-model="event.eventData.password" id="password">
         </div>
-    
-        <div class="field">
-          <label class="ui black label">Date</label>
+      </div>
+
+      <h4 class="ui dividing header">Event Details</h4>
+      <div class="two fields">
+        <div class="eight wide field">
+          <label class="ui primary label">Date</label>
           <input ng-disabled="event.disabled" placeholder="Email" type="text" name="email" ng-model="event.eventData.email" id="email">
         </div>
     
-        <div class="field">
-          <label class="ui black label">EventID</label>
-          <input ng-disabled="event.disabled" placeholder="Password" type="password" name="password" ng-model="event.eventData.password" id="password">
+        <div class="eight wide field">
+          <label class="ui primary label">Venue</label>
+          <input ng-disabled="event.disabled" placeholder="Username" type="text" name="username" ng-model="event.eventData.username" id="username">
+        </div>
+      </div>
+
+      <h4 class="ui dividing header">Seating Details</h4>
+      <div class="two fields">
+        <div class="four wide field">
+          <label class="ui primary label">Number of tables</label>
+          <input ng-disabled="event.disabled" placeholder="Email" type="text" name="email" ng-model="event.eventData.email" id="email">
+        </div>
+    
+        <div class="four wide field">
+          <label class="ui primary label">Number of seats</label>
+          <input ng-disabled="event.disabled" placeholder="Username" type="text" name="username" ng-model="event.eventData.username" id="username">
         </div>
       </div>
     
@@ -37,8 +54,8 @@
         <div class="header">Uh Oh</div>
         <p>{{ event.failMsg }}</p>
       </div>
-    
-      <button ng-disabled="event.disabled" class="ui huge primary button" type="submit">event</button>
+      <br>
+      <button ng-disabled="event.disabled" class="ui huge primary button" type="submit">Create Event</button>
     </form>
     
     
