Added view event page with two tables

--- a/public/app/views/pages/events/events.html
+++ b/public/app/views/pages/events/events.html
@@ -55,7 +55,14 @@
                     <a>
                         <button class="ui yellow basic button">Edit</button> 
                     </a>
-                    <button class="ui negative basic button right floated">Delete</button>
+                    <a href="/viewEvent">
+                        <button class="ui blue basic button">
+                            View
+                        </button>
+                    </a>
+                    <button class="ui negative basic button right floated">
+                        Delete
+                    </button>
                 </td>
             </tr>
         </tbody>   
