Just added headings for the tables that I forgot

--- a/public/app/views/pages/events/viewEvent.html
+++ b/public/app/views/pages/events/viewEvent.html
@@ -26,6 +26,7 @@
 
     <div class="ui stackable two column grid">
         <div class="column">
+            Attending
             <table id="example" class="ui celled inverted primary table" cellspacing="0" width="100%">
                 <thead>
                 <tr>
@@ -60,6 +61,7 @@
             
         </div>
         <div class="column">
+            Invited
             <table id="example1" class="ui celled inverted primary table" cellspacing="0" width="100%">
                 <thead>
                 <tr>
