--- a/public/app/views/pages/events/viewEvent.html
+++ b/public/app/views/pages/events/viewEvent.html
@@ -32,7 +32,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Email</th>
-                    <th></th>
+                    <th>Manage</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -67,7 +67,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Email</th>
-                    <th></th>
+                    <th>Manage</th>
                 </tr>
                 </thead>
                 <tbody>
