Nearly finished guest list and there might be one event created with people invited so that should help hopefully

--- a/public/app/views/pages/events/events.html
+++ b/public/app/views/pages/events/events.html
@@ -55,7 +55,12 @@
                     <a>
                         <button class="ui yellow basic button">Edit</button> 
                     </a>
-                    <a href="/viewEvent">
+                    <!-- I added this button - Conor 
+                        Should probably look like whats below
+                        commented out. Will depend on the code above thats commented out
+                        <a href="/viewEvent/{{event.id}}"> 
+                        -->
+                    <a href="/viewEvent/">
                         <button class="ui blue basic button">
                             View
                         </button>
