--- a/public/app/views/pages/events/viewEvent.html
+++ b/public/app/views/pages/events/viewEvent.html
@@ -53,31 +53,6 @@
                             <button class="ui negative basic button right floated">Delete</button>
                         </td>
                     </tr>
-                    <!-- <tr>
-                        <td>Micky Mouse</td>
-                        <td>Micky@disney.com</td>
-                        <td>   
-                            <a href="/edit/{{person._id}}">  this should replace the next
-                                line or something similar for when the table is properly populated
-                           
-                            <a>
-                                This edit button just used to edit user
-                                <button class="ui yellow basic button">Edit</button> 
-                            </a>
-                            delete button to remove person from guest list or delete them entirely????
-                            <button class="ui negative basic button floated">Delete</button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Goofy</td>
-                        <td>Goofy@disney.com</td>
-                        <td>
-                            <a>
-                                <button class="ui yellow basic button">Edit</button> 
-                            </a>
-                            <button class="ui negative basic button floated">Delete</button>
-                        </td>
-                    </tr> -->
                 </tbody>   
             </table>   
         </div>
@@ -108,13 +83,14 @@
 
                             <!-- <button ng-click="event.deleteUser(person.username);" class="ui negative basic button right floated">Delete</button> 
 
-                                not sure if we want to delete user
+                                not sure if we want to delete user -->
 
-                            -->
+                           
 
                             <button class="ui negative basic button right floated">Delete</button>
                         </td>
-                    </tr>  
+                    </tr> 
+                    
                 </tbody>   
             </table>
         </div>
@@ -130,14 +106,14 @@
                  <button ng-click="event.showAll();" class="ui primary  small button">Show All</button>
             </div>      
          </div>  
-    </div>
+    </div> -->
 
 
-    <div class="ui active dimmer" ng-show="event.loading">
+    <!-- <div class="ui active dimmer" ng-show="event.loading">
         <div class="ui text loader">Looking for Seán FitzPatrick...</div>
-    </div>
+    </div> -->
 
-    <div class="ui success message" ng-show="event.successMsg">
+    <!-- <div class="ui success message" ng-show="event.successMsg">
         <div class="header">All Set</div>
         <p>{{ event.successMsg }}</p>
     </div> -->
