--- a/public/app/views/pages/events/events.html
+++ b/public/app/views/pages/events/events.html
@@ -36,7 +36,7 @@
         </tr>
         </thead>
         <tbody>
-            <!-- <tr ng-repeat="person in event.users | filter: searchKeyword | limitTo: event.limit">
+            <!-- <tr ng-repeat="event in event.users | filter: searchKeyword | limitTo: event.limit">
                 <td>{{ person.name }}</td>
                 <td>{{ person.username }}</td>
                 <td>{{ person.email }}</td>
@@ -60,7 +60,7 @@
                         commented out. Will depend on the code above thats commented out
                         <a href="/viewEvent/{{event.id}}"> 
                         -->
-                    <a href="/viewEvent/">
+                    <a href="/viewEvent/1">
                         <button class="ui blue basic button">
                             View
                         </button>
