working on tickets

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -35,6 +35,7 @@
   <script src="app/controllers/editCtrl.js"></script>
   <script src="app/controllers/managementCtrl.js"></script>
   <script src="app/controllers/eventCtrl.js"></script>
+  <script src="app/controllers/ticketCtrl.js"></script>
 
   <!-- Angular Services -->
   <script src="app/services/userServices.js"></script>
