just a lil important touch

--- a/public/app/views/pages/events/events.html
+++ b/public/app/views/pages/events/events.html
@@ -65,7 +65,7 @@
                             View
                         </button>
                     </a>
-					<!--Update this later !TODO --!>
+					<!--Update this later TODO -->
 					<a ng-show="event.isLoggedIn && event.admin" href="Nowhere">
                     	<button class="ui negative basic button right floated">
                        		Delete
