I think I have manage guest list done just need to ask dylan a couple of things and write tests

--- a/public/app/views/pages/events/events.html
+++ b/public/app/views/pages/events/events.html
@@ -36,13 +36,18 @@
         </tr>
         </thead>
         <tbody>
-            <!-- <tr ng-repeat="event in event.users | filter: searchKeyword | limitTo: event.limit">
-                <td>{{ person.name }}</td>
-                <td>{{ person.username }}</td>
-                <td>{{ person.email }}</td>
+           <!--  <tr ng-repeat="event in event.users | filter: searchKeyword | limitTo: event.limit">
+                <td>{{ event.name }}</td>
+                <td>{{ event.venue }}</td>
+                <td>{{ person.date }}</td>
                 <td>
                     <a href="/edit/{{person._id}}">
                         <button class="ui yellow basic button">Edit</button> 
+                    </a>
+                    <a href="/viewEvent/1">
+                        <button class="ui blue basic button">
+                            View
+                        </button>
                     </a>
                     <button ng-click="event.deleteUser(person.username);" class="ui negative basic button right floated">Delete</button>
                 </td>
@@ -55,11 +60,8 @@
                     <a>
                         <button class="ui yellow basic button">Edit</button> 
                     </a>
-                    <!-- I added this button - Conor 
-                        Should probably look like whats below
-                        commented out. Will depend on the code above thats commented out
-                        <a href="/viewEvent/{{event.id}}"> 
-                        -->
+                    <a href="/viewEvent/{{event.id}}"> 
+                       
                     <a href="/viewEvent/1">
                         <button class="ui blue basic button">
                             View
