this might make things better maybe later on but its commented out for the moment

--- a/public/app/views/pages/events/createEvent.html
+++ b/public/app/views/pages/events/createEvent.html
@@ -55,7 +55,9 @@
         <p>{{ event.failMsg }}</p>
       </div>
       <br>
+      <!-- <a href="/events"> -->
       <button ng-disabled="event.disabled" class="ui huge primary button" type="submit">Create Event</button>
+      <!-- </a> -->
     </form>
     
     
